--- a/scripts/qtile/bar_menus/power_managment_styles.css
+++ b/scripts/qtile/bar_menus/power_managment_styles.css
@@ -3,8 +3,17 @@
     margin-right: 5px;  
     margin-bottom: 5px;
     margin-left: 5px;
-    background: rgba(46, 52, 64, 0.85);
+    background: rgba(46, 52, 64, 0);
 }
+
+#root-root {
+    margin-top: 5px;    
+    margin-right: 5px;  
+    margin-bottom: 5px;
+    margin-left: 5px;
+    background: rgba(46, 52, 64, 0.9);
+}
+
 
 #charge-main-box {
     margin-bottom: 10px;
