--- a/scripts/qtile/bar_menus/main_menu_styles.css
+++ b/scripts/qtile/bar_menus/main_menu_styles.css
@@ -7,7 +7,7 @@
     border-width: 3px;
     border-color: #4f586e;
     /* background:rgba(36, 40, 49, 0.85); */
-    background: rgba(46, 52, 64, 0.85);
+    background: rgba(46, 52, 64, 0.90);
 }
 
 #content-area {
@@ -20,7 +20,7 @@
     background: rgba(46, 52, 64, 0);
 }
 
-#empty-box {
+#rofi-box {
     border-radius: 5px;
     margin-top: 10px;    
     margin-right: 10px;  
@@ -28,59 +28,137 @@
     margin-left: 10px;
 }
 
-#toggle-box {
+#toggle-boxes {
     border-radius: 5px;
+    margin-top: 10px;    
+    margin-right: 10px;  
+    margin-bottom: 10px;
+    margin-left: 10px;
     background: #4f586e;
 }
 
-#toggle-label-enabled {
-    color: black;
-    font-size: 20;
-    font-family: 'Font Awesome 6 Free Solid';
+#toggle-box {
+    margin-top: 16px;    
+    margin-right: 16px;  
+    margin-bottom: 16px;
+    margin-left: 16px;
 }
 
-#toggle-label-disabled {
-    color: white;
-    font-size: 20;
-    font-family: 'Font Awesome 6 Free Solid';
+#toggle-right-box-enabled {
+    border-radius: 5px;
+    background: red;
 }
 
-#toggle-box-enabled {
+#toggle-right-box-disabled {
+    border-radius: 5px;
+}
+
+#toggle-left-box-enabled {
     border-radius: 5px;
     background: #81a1c1;
 }
 
-#toggle-box-disabled {
+#toggle-left-box-disabled {
     border-radius: 5px;
     background: #2e3440;
 }
 
-#toggle-title {
+#toggle-icon-enabled {
+    color: black;
+    font-size: 20px;
+    font-family: 'Font Awesome 6 Free Solid';
+}
+
+#toggle-icon-disabled {
     color: white;
-    font-size: 19;
+    font-size: 20px;
+    font-family: 'Font Awesome 6 Free Solid';
+}
+
+#toggle-list-button-disabled {
+    margin-bottom: 10px;
+    font-size: 22px;
+    font-family: 'Font Awesome 6 Free Solid';
+}
+
+#toggle-list-button-enabled {
+    margin-bottom: 2px;
+    font-size: 22px;
+    font-family: 'Font Awesome 6 Free Solid';
+}
+
+#toggle-title {
+    margin-top: 4px;    
+    margin-bottom: 5px;
+    margin-left: 12px;
+    color: white;
+    font-size: 19px;
     font-family: FiraCode Nerd Font;
     font-weight: bold;
 }
 
 #toggle-desc {
+    margin-left: 12px;
     color: white;
-    font-size: 19;
+    font-size: 19px;
     font-family: FiraCode Nerd Font;
 }
 
 #toggle-bluetooth-label {
     color: white;
-    font-size: 24;
+    font-size: 24px;
     font-family: 'Font Awesome 6 Free Solid';
     font-weight: bold;
 }
 
+#list-box {
+    border-radius: 5px;
+    margin-top: 10px;    
+    margin-right: 10px;  
+    margin-bottom: 10px;
+    margin-left: 10px;
+    background: #4f586e;
+}
+
+#list-obj-active {
+    border-radius: 5px;
+    margin-top: 5px;    
+    margin-right: 5px;  
+    margin-bottom: 5px;
+    margin-left: 5px;
+    background: #81a1c1;
+    color: black;
+    font-size: 18px;
+    font-family: FiraCode Nerd Font;
+}
+
+#list-obj {
+    border-radius: 5px;
+    margin-top: 5px;    
+    margin-right: 5px;  
+    margin-bottom: 5px;
+    margin-left: 5px;
+    font-size: 18px;
+    font-family: FiraCode Nerd Font;
+}
+
+#list {
+    border-radius: 5px;
+    margin-top: 10px;    
+    margin-right: 10px;  
+    margin-bottom: 10px;
+    margin-left: 10px;
+    background: #4f586e;
+    font-size: 18px;
+    font-family: FiraCode Nerd Font;
+}
+
 .rofi-icon {
     margin-top: 26px;    
-    margin-right: 28px;  
+    margin-right: 38px;  
     margin-bottom: 26px;
-    margin-left: 28px;
-    font-size: 26;
+    margin-left: 39px;
+    font-size: 26px;
     font-family: 'Font Awesome 6 Free Solid';
 }
 
@@ -121,24 +199,8 @@
     border-radius: 5px;
     background: #4f586e;
     color: black;
-    font-size: 26;
+    font-size: 26px;
     font-family: 'Font Awesome 6 Free Solid';
-}
-
-#icons {
-    margin-right: 15px;  
-    margin-left: 4px;
-    color: white;
-    font-size: 24;
-    font-family: 'Font Awesome 6 Free Solid';
-    font-weight: bold;
-}
-
-#volume-icon {
-    color: white;
-    font-size: 22;
-    font-family: 'Font Awesome 6 Free Solid';
-    font-weight: bold;
 }
 
 #slider-box {
@@ -156,7 +218,7 @@
     margin-bottom: 5px;
     margin-left: 18px;
     color: white;
-    font-size: 21;
+    font-size: 21px;
     font-family: FiraCode Nerd Font;
     font-weight: bold;
 }
@@ -166,20 +228,19 @@ scale trough {
     margin-right: 10px;  
     margin-bottom: 10px;
     margin-left: 10px;
-    border-radius: 7;
-    min-width: 10px;                                                                               
+    border-radius: 7px;                                                                              
     min-height: 22px;   
     background: #3b4252  
 }   
 
 scale trough highlight {
-    border-radius: 8;
+    border-radius: 8px;
     background: #81a1c1;
 }   
 
 scale trough slider {
     background: #d9dedf;
-    border-radius: 10;
+    border-radius: 10px;
     min-width: 24px;                                                                               
     min-height: 24px;          
 }   
