--- a/scripts/qtile/bar_menus/wifi_menu_styles.css
+++ b/scripts/qtile/bar_menus/wifi_menu_styles.css
@@ -12,16 +12,88 @@
     background: rgba(46, 52, 64, 0);
 }
 
+#toggle-box {
+    margin-bottom: 8px;
+    border-radius: 5px;
+    background: #4f586e;
+}
+
+#toggle-title {
+    margin-top: 12px;    
+    margin-right: 10px;  
+    margin-bottom: 10px;
+    margin-left: 2px;
+    color: white;
+    font-size: 22px;
+    font-family: FiraCode Nerd Font;
+    font-weight: bold;
+}
+
+#toggle-left-box {
+    border-radius: 5px;
+}
+
+#toggle-icon-background-enabled {
+    margin-top: 10px;    
+    margin-right: 10px;  
+    margin-bottom: 10px;
+    margin-left: 10px;
+    border-radius: 5px;
+    background: #81a1c1;
+}
+
+#toggle-icon-background-disabled {
+    margin-top: 10px;    
+    margin-right: 10px;  
+    margin-bottom: 10px;
+    margin-left: 10px;
+    border-radius: 5px;
+    background: #2e3440;
+}
+
+#toggle-icon-enabled {
+    margin-top: 10px;    
+    margin-right: 10px;  
+    margin-bottom: 10px;
+    margin-left: 10px;
+    border-radius: 5px;
+    color: black;
+    font-size: 18px;
+    font-family: 'Font Awesome 6 Free Solid';
+    background: #81a1c1;
+}
+
+#toggle-icon-disabled {
+    margin-top: 10px;    
+    margin-right: 10px;  
+    margin-bottom: 10px;
+    margin-left: 10px;
+    border-radius: 5px;
+    color: white;
+    font-size: 18px;
+    font-family: 'Font Awesome 6 Free Solid';
+    background: #2e3440;
+}
+
 #list-box {
     border-radius: 5px;
     background: #4f586e;
 }
 
+#list-obj-box-active {
+    border-radius: 5px;
+    background: #81a1c1;
+    color: black;
+    font-size: 18px;
+    font-family: FiraCode Nerd Font;
+}
+
 #list-obj-active {
-    margin-top: 5px;    
-    margin-right: 5px;  
-    margin-bottom: 5px;
-    margin-left: 5px;
+    margin-top: 10px;    
+    margin-right: 10px;  
+    margin-bottom: 10px;
+    margin-left: 10px;
+    border-radius: 5px;
     background: #81a1c1;
     color: black;
     font-size: 18px;
@@ -29,18 +101,29 @@
 }
 
 #list-obj {
-    margin-top: 5px;    
-    margin-right: 5px;  
-    margin-bottom: 5px;
-    margin-left: 5px;
+    margin-top: 10px;    
+    margin-right: 10px;  
+    margin-bottom: 10px;
+    margin-left: 10px;
     border-radius: 5px;
     font-size: 18px;
     font-family: FiraCode Nerd Font;
 }
 
 #list {
+    margin-top: 10px;    
+    margin-bottom: 10px;
     border-radius: 5px;
     background: #4f586e;
     font-size: 18px;
     font-family: FiraCode Nerd Font;
+}
+
+#list-content-box-active {
+    border-radius: 5px;
+    background: rgba(46, 52, 64, 0.90);
+}
+
+#list-content-box-inactive {
+    background: #4f586e;
 }
