--- a/scripts/qtile/bar_menus/bluetooth/bluetooth_menu_styles.css
+++ b/scripts/qtile/bar_menus/bluetooth/bluetooth_menu_styles.css
@@ -12,21 +12,58 @@
     background: rgba(46, 52, 64, 0);
 }
 
+#status-dot-inactive {
+    margin-top: 10px;    
+    margin-right: 20px;  
+    margin-bottom: 10px;
+    margin-left: 10px;
+    color: rgba(46, 52, 64, 0.9);
+    font-size: 12px;
+    font-family: 'Font Awesome 6 Free Solid';
+}
+
+#status-dot-list-update {
+    margin-top: 10px;    
+    margin-right: 20px;  
+    margin-bottom: 10px;
+    margin-left: 10px;
+    color: #b48ead;
+    font-size: 12px;
+    font-family: 'Font Awesome 6 Free Solid';
+}
+
 #toggle-box {
     margin-bottom: 8px;
     border-radius: 5px;
     background: #4f586e;
 }
 
-#toggle-title {
-    margin-top: 12px;    
+#toggle-desc-box {
+    margin-top: 0px;    
     margin-right: 10px;  
-    margin-bottom: 10px;
+    margin-bottom: 0px;
+    margin-left: 2px;
+}
+
+#toggle-title {
+    margin-top: 9px;    
+    margin-right: 10px;  
+    margin-bottom: 0px;
     margin-left: 2px;
     color: white;
-    font-size: 22px;
+    font-size: 20px;
     font-family: FiraCode Nerd Font;
     font-weight: bold;
+}
+
+#toggle-desc {
+    margin-top: 2px;    
+    margin-right: 10px;  
+    margin-bottom: 0px;
+    margin-left: 2px;
+    color: white;
+    font-size: 14px;
+    font-family: FiraCode Nerd Font;
 }
 
 #toggle-left-box {
@@ -53,9 +90,9 @@
 
 #toggle-icon-enabled {
     margin-top: 6px;    
-    margin-right: 13px;  
+    margin-right: 15px;  
     margin-bottom: 6px;
-    margin-left: 13px;
+    margin-left: 15px;
     border-radius: 5px;
     color: black;
     font-size: 26px;
@@ -70,7 +107,7 @@
     margin-left: 13px;
     border-radius: 5px;
     color: white;
-    font-size: 26px;
+    font-size: 24px;
     font-family: 'Font Awesome 6 Free Solid';
     background: #2e3440;
 }
