--- a/scripts/qtile/bar_menus/wifi/wifi_menu_styles.css
+++ b/scripts/qtile/bar_menus/wifi/wifi_menu_styles.css
@@ -110,6 +110,16 @@
     background: #4f586e;
 }
 
+#known-icon {
+    margin-top: 10px;    
+    margin-right: 10px;  
+    margin-bottom: 10px;
+    margin-left: 10px;
+    font-size: 24px;
+    font-family: 'Font Awesome 6 Free Solid';
+    background: #81a1c1;
+}
+
 #list-obj-box-active {
     border-radius: 5px;
     background: #81a1c1;
