--- a/scripts/qtile/bar_menus/bluetooth/bluetooth_menu_styles.css
+++ b/scripts/qtile/bar_menus/bluetooth/bluetooth_menu_styles.css
@@ -32,8 +32,18 @@
     font-family: 'Font Awesome 6 Free Solid';
 }
 
+#status-dot-off {
+    margin-top: 10px;    
+    margin-right: 20px;  
+    margin-bottom: 10px;
+    margin-left: 10px;
+    color: #c1656e;
+    font-size: 12px;
+    font-family: 'Font Awesome 6 Free Solid';
+}
+
 #toggle-box {
-    margin-bottom: 8px;
+    /* margin-bottom: 8px; */
     border-radius: 5px;
     background: #4f586e;
 }
@@ -102,12 +112,12 @@
 
 #toggle-icon-disabled {
     margin-top: 6px;    
-    margin-right: 13px;  
+    margin-right: 15px;  
     margin-bottom: 6px;
-    margin-left: 13px;
+    margin-left: 15px;
     border-radius: 5px;
     color: white;
-    font-size: 24px;
+    font-size: 26px;
     font-family: 'Font Awesome 6 Free Solid';
     background: #2e3440;
 }
