--- a/scripts/qtile/bar_menus/wifi/wifi_menu_styles.css
+++ b/scripts/qtile/bar_menus/wifi/wifi_menu_styles.css
@@ -32,8 +32,17 @@
     font-family: 'Font Awesome 6 Free Solid';
 }
 
+#status-dot-off {
+    margin-top: 10px;    
+    margin-right: 20px;  
+    margin-bottom: 10px;
+    margin-left: 10px;
+    color: #c1656e;
+    font-size: 12px;
+    font-family: 'Font Awesome 6 Free Solid';
+}
+
 #toggle-box {
-    margin-bottom: 8px;
     border-radius: 5px;
     background: #4f586e;
 }
@@ -94,13 +103,13 @@
 }
 
 #toggle-icon-disabled {
-    margin-top: 12px;    
-    margin-right: 12px;  
-    margin-bottom: 12px;
-    margin-left: 12px;
+    margin-top: 10px;    
+    margin-right: 10px;  
+    margin-bottom: 10px;
+    margin-left: 10px;
     border-radius: 5px;
     color: white;
-    font-size: 20px;
+    font-size: 24px;
     font-family: 'Font Awesome 6 Free Solid';
     background: #2e3440;
 }
