--- a/scripts/qtile/bar_menus/volume/volume_menu_styles.css
+++ b/scripts/qtile/bar_menus/volume/volume_menu_styles.css
@@ -57,28 +57,6 @@
     background: #b48ead;
 }
 
-#list-opitons-title-active {
-    margin-top: 10px;    
-    margin-right: 8px;  
-    margin-bottom: 8px;
-    margin-left: 8px;
-    color: black;
-    font-size: 20px;
-    font-family: 'Font Awesome 6 Free Solid';
-    font-weight: bold;
-}
-
-#list-opitons-title-inactive {
-    margin-top: 10px;    
-    margin-right: 8px;  
-    margin-bottom: 8px;
-    margin-left: 8px;
-    color: white;
-    font-size: 20px;
-    font-family: 'Font Awesome 6 Free Solid';
-    font-weight: bold;
-}
-
 #toggle-title {
     margin-top: 9px;    
     margin-right: 10px;  
@@ -115,9 +93,9 @@
 
 #toggle-icon-background-disabled {
     margin-top: 10px;    
-    margin-right: 10px;  
+    margin-right: 11px;  
     margin-bottom: 10px;
-    margin-left: 10px;
+    margin-left: 11px;
     border-radius: 5px;
     background: #2e3440;
 }
@@ -161,7 +139,46 @@
     background: #b48ead;
 }
 
+#list-icon-headphone {
+    margin-top: 10px;    
+    margin-right: 10px;  
+    margin-bottom: 10px;
+    margin-left: 2px;
+    color: white;
+    font-size: 18px;
+    font-family: 'Font Awesome 6 Free Solid';
+    font-weight: bold;   
+}
+
+#list-icon-speaker {
+    margin-top: 12px;    
+    margin-right: 9px;  
+    margin-bottom: 12px;
+    margin-left: 1px;
+    color: white;
+    font-size: 16px;
+    font-family: 'Font Awesome 6 Free Solid';
+    font-weight: bold;   
+}
+
+#list-icon-box {
+    border-radius: 5px 0px 0px 5px;
+    background: #2e3440;
+}
+
+#list-obj-box-inactive {
+    margin-top: 5px;    
+    margin-bottom: 5px;    
+    border-radius: 5px;
+    background: #434b5d;
+    color: white;
+    font-size: 18px;
+    font-family: FiraCode Nerd Font;
+}
+
 #list-obj-box-active {
+    margin-top: 5px;    
+    margin-bottom: 5px;    
     border-radius: 5px;
     background: #b48ead;
     color: black;
@@ -170,10 +187,6 @@
 }
 
 #list-obj-active {
-    margin-top: 10px;    
-    margin-right: 10px;  
-    margin-bottom: 10px;
-    margin-left: 10px;
     border-radius: 5px;
     background: #b48ead;
     color: black;
@@ -182,13 +195,16 @@
 }
 
 #list-obj {
-    margin-top: 10px;    
-    margin-right: 10px;  
-    margin-bottom: 10px;
-    margin-left: 10px;
+    margin-right: 12px;  
     border-radius: 5px;
     font-size: 18px;
     font-family: FiraCode Nerd Font;
+}
+
+#row {
+    margin-left: 5px;
+    margin-right: 5px;
+    border-radius: 5px;
 }
 
 #list {
@@ -206,5 +222,6 @@
 }
 
 #list-content-box-inactive {
+    border-radius: 10px;
     background: #4f586e;
 }
