--- a/scripts/qtile/bar_menus/wifi/wifi_menu_styles.css
+++ b/scripts/qtile/bar_menus/wifi/wifi_menu_styles.css
@@ -12,6 +12,10 @@
     background: rgba(46, 52, 64, 0);
 }
 
+#option-window-content-area {
+    background: rgba(46, 52, 64, 0);
+}
+
 #status-dot-inactive {
     margin-top: 10px;    
     margin-right: 20px;  
@@ -151,17 +155,65 @@
     background: #4f586e;
 }
 
-#known-icon {
-    margin-top: 10px;    
-    margin-right: 10px;  
-    margin-bottom: 10px;
-    margin-left: 10px;
-    font-size: 24px;
+#known-icon-active-obj {
+    margin-right: 12px;
+    font-size: 12px;
     font-family: 'Font Awesome 6 Free Solid';
-    background: #81a1c1;
+    color: rgba(46, 52, 64, 0.9);
+}
+#known-icon-inactive-obj {
+    margin-right: 12px;
+    font-size: 12px;
+    font-family: 'Font Awesome 6 Free Solid';
+    color: #a3be8c;
+}
+
+#list-icon {
+    margin-top: 12px;    
+    margin-right: 10px;  
+    margin-bottom: 12px;
+    margin-left: 2px;
+    color: white;
+    font-size: 14px;
+    font-family: 'Font Awesome 6 Free Solid';
+    font-weight: bold;   
+}
+
+#list-icon-box {
+    border-radius: 5px;
+    /* border-radius: 5px 0px 0px 5px; */
+    background: #2e3440;
+}
+
+#list-obj-box-active-clicked {
+    margin-top: 4px;    
+    margin-bottom: 4px;  
+    border-radius: 5px;
+    background: rgba(46, 52, 64, 0.90);
+    font-size: 18px;
+}
+
+#list-obj-box-inactive-clicked {
+    margin-top: 4px;    
+    margin-bottom: 4px;  
+    border-radius: 5px;
+    background: rgba(46, 52, 64, 0.90);
+    font-size: 18px;
+}
+
+#list-obj-box-inactive {
+    margin-top: 4px;    
+    margin-bottom: 4px;  
+    border-radius: 5px;
+    background: #434b5d;  
+    color: white;
+    font-size: 18px;
+    font-family: FiraCode Nerd Font;
 }
 
 #list-obj-box-active {
+    margin-top: 4px;    
+    margin-bottom: 4px;  
     border-radius: 5px;
     background: #81a1c1;
     color: black;
@@ -170,10 +222,6 @@
 }
 
 #list-obj-active {
-    margin-top: 10px;    
-    margin-right: 10px;  
-    margin-bottom: 10px;
-    margin-left: 10px;
     border-radius: 5px;
     background: #81a1c1;
     color: black;
@@ -182,13 +230,15 @@
 }
 
 #list-obj {
-    margin-top: 10px;    
-    margin-right: 10px;  
-    margin-bottom: 10px;
-    margin-left: 10px;
     border-radius: 5px;
     font-size: 18px;
     font-family: FiraCode Nerd Font;
+}
+
+#row {
+    margin-left: 5px;
+    margin-right: 5px;
+    border-radius: 5px;
 }
 
 #list {
@@ -207,4 +257,60 @@
 
 #list-content-box-inactive {
     background: #4f586e;
+}
+
+#buttons {
+    font-size: 18px;
+    border-radius: 0px;
+    font-family: "FiraCode Nerd Font";
+    font-weight: lighter;
+}
+
+#connect-animation-box { 
+    margin-top: 17px;    
+    margin-bottom: 17px;
+    margin-right: 15px;  
+    margin-left: 15px;
+}
+
+#connect-animation-icon-success {
+    color: #a3be8c;
+    font-size: 22px;
+    font-family: 'Font Awesome 6 Free Solid';
+    font-weight: bold;   
+}
+
+#connect-animation-icon-active {
+    color: #81a1c1;
+    font-size: 22px;
+    font-family: 'Font Awesome 6 Free Solid';
+    font-weight: bold;   
+}
+
+#connect-animation-icon-inactive {
+    color: #4f586e;
+    font-size: 22px;
+    font-family: 'Font Awesome 6 Free Solid';
+    font-weight: bold;   
+}
+
+#connect-animation-circle-success {
+    color: #a3be8c;
+    font-size: 7px;
+    font-family: 'Font Awesome 6 Free Solid';
+    font-weight: bold;   
+}
+
+#connect-animation-circle-active {
+    color: #81a1c1;
+    font-size: 7px;
+    font-family: 'Font Awesome 6 Free Solid';
+    font-weight: bold;   
+}
+
+#connect-animation-circle-inactive {
+    color: #4f586e;
+    font-size: 7px;
+    font-family: 'Font Awesome 6 Free Solid';
+    font-weight: bold;   
 }
