--- a/scripts/qtile/bar_menus/ticktick/ticktick_menu_styles.css
+++ b/scripts/qtile/bar_menus/ticktick/ticktick_menu_styles.css
@@ -98,7 +98,7 @@
     margin-left: 10px;
     margin-right: 10px;
     border-radius: 5px;
-    background: rgba(46, 52, 64, 0.90);
+    background: #434b5d;
 }
 .task-list-title-box {
     margin-top: 5px;    
@@ -108,22 +108,23 @@
     border-radius: 5px;
 }
 .task-list-title {
-    margin-top: 1px;
     margin-right: 20px;
-    font-size: 20px;
+    margin-left: 10px;
+    font-size: 21px;
     font-family: FiraCode Nerd Font;
     font-weight: bold;
 }
 .task-list-icon-box {
     border-radius: 5px;
+    background: #2e3440;
 }
 .task-list-icon {
-    margin-top: 12px;    
-    margin-bottom: 12px;
-    margin-left: 15px;
-    margin-right: 15px;
+    /* margin-top: 6px;    
+    margin-bottom: 6px; */
+    margin-left: 12px;
+    margin-right: 12px;
     color: white;
-    font-size: 22px;
+    font-size: 19px;
     font-family: 'Font Awesome 6 Free Solid';
 }
 .task-list-box {
@@ -132,16 +133,21 @@
     /* border: 4px solid #c1656e; */
 }
 .task-list-plus-box {
-    margin-top: 2px;    
-    margin-bottom: 1px;
-    margin-left: 1px;
-    margin-right: 2px;    
-    background: #4f586e;
+    margin-top: 10px;    
+    margin-right: 12px;  
+    margin-bottom: 10px;
+    margin-left: 10px;
+    border-radius: 5px;   
+    background: #2e3440;
 }
 .task-list-plus-icon {
+    margin-top: 5px;    
+    margin-bottom: 5px;
+    margin-right: 7px;  
+    margin-left: 7px;
     color: #a3be8c;
+    font-size: 19px;
     font-family: 'Font Awesome 6 Free Solid';
-    font-size: 20px;
 }
 .list {
     margin-top: 10px;    
@@ -200,6 +206,8 @@
     margin-left: 2px;
     color: white;
     font-size: 18px;
+    font-family: "ttf-apple-emoji";
+
 }
 #sub-list-icon-active {
     color: #c1656e;
@@ -247,6 +255,42 @@
 .sub-list-name {
     margin-bottom: 10px;  
     margin-top: 10px;    
+    margin-right: 10px;  
+    border-radius: 5px;
+    font-size: 18px;
+    font-family: FiraCode Nerd Font;
+}
+.task-today-list {
+    border-radius: 5px;
+    background: #4f586e;
+    padding: 10px;
+}
+.main-today-list-icon-box {
+    border-radius: 5px;
+}
+.main-today-list-icon {
+    margin-bottom: 10px;  
+    margin-top: 10px;  
+    margin-right: 10px;  
+    border-radius: 5px;
+    font-family: 'Font Awesome 6 Free Regular';
+    font-size: 24px;
+}
+#main-today-list-icon-0 {
+    color: white;
+}
+#main-today-list-icon-1 {
+    color: #5e81ac;
+}
+#main-today-list-icon-2 {
+    color: #d08770;
+}
+#main-today-list-icon-3 {
+    color: #bf616a;
+}
+.main-today-list-name {
+    margin-bottom: 10px;  
+    margin-top: 12px;  
     margin-right: 10px;  
     border-radius: 5px;
     font-size: 18px;
