--- a/scripts/qtile/bar_menus/bluetooth/bluetooth_menu_styles.css
+++ b/scripts/qtile/bar_menus/bluetooth/bluetooth_menu_styles.css
@@ -1,14 +1,14 @@
 .root {
     border-width: 5px;
-    border-color: #4f586e;
-    background: rgba(46, 52, 64, 0.90);
+    border-color: rgba(79, 88, 110, 0.9);
+    background: rgba(46, 52, 64, 0.9);
 }
 .content-area {
     margin-top: 5px;    
     margin-right: 5px;  
     margin-bottom: 5px;
     margin-left: 5px;
-    background: rgba(46, 52, 64, 0);
+    background: rgba(46, 52, 64, 0.9);
 }
 
 /* TITLE */
@@ -21,7 +21,7 @@
     font-family: 'Font Awesome 6 Free Solid';
 }
 #status-dot-inactive {
-    color: rgba(46, 52, 64, 0.9);
+    color: rgba(46, 52, 64, 0.8);
 }
 #status-dot-list-update {
     color: #9B98B7;
@@ -41,11 +41,11 @@
     color: #9B98B7;
 }
 #load-bar-inactive {
-    color: rgba(46, 52, 64, 0.9);
+    color: rgba(46, 52, 64, 0.8);
 }
 .toggle-title-box {
     border-radius: 5px;
-    background: #4f586e;
+    background: rgba(79, 88, 110, 0.8);
 }
 .toggle-title {
     margin-top: 9px;    
@@ -81,7 +81,7 @@
     background: #9B98B7;
 }
 #toggle-icon-box-disabled {
-    background: #2e3440;
+    background: rgba(46, 52, 64, 0.8);
 }
 .toggle-icon {
     margin-top: 6px;    
@@ -99,19 +99,19 @@
 }
 #toggle-icon-disabled {
     color: white;
-    background: #2e3440;
+    background: rgba(46, 52, 64, 0.8);
 }
 
 /* LIST */
 .list-box {
     border-radius: 5px;
-    background: #4f586e;
+    background: rgba(79, 88, 110, 0.8);
 }
 .list {
     margin-top: 10px;    
     margin-bottom: 10px;
     border-radius: 5px;
-    background: #4f586e;
+    background: rgba(79, 88, 110, 0.8);
 }
 .row {
     margin-left: 5px;
@@ -187,7 +187,7 @@
     color: black;
 }
 #list-name-box-clicked {
-    background: rgba(46, 52, 64, 0.90);
+    background: rgba(46, 52, 64, 0.8);
 }
 .list-name {
     margin-bottom: 10px;  
@@ -238,7 +238,7 @@
     border-radius: 3px;
 }
 #toggle-box-list-options-inactive {
-    background: #4f586e;
+    background: rgba(79, 88, 110, 0.8);
 }
 #toggle-box-list-options-active {
     background: #9B98B7;
